name:                hackage-whatsnew
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable hackage-whatsnew
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       Cabal >= 1.22 && < 1.23,
                       containers >=0.5 && <0.6,
                       directory >= 1.2 && < 1.3,
                       filepath >= 1.4 && < 1.5,
                       hackage-db >= 1.22 && < 1.23,
                       process >= 1.2 && < 1.3,
                       temporary >= 1.2 && < 1.3
  default-language:    Haskell2010
